implemented turn switching, finished game

--- a/proj1_js/board.html
+++ b/proj1_js/board.html
@@ -14,13 +14,13 @@
 
 <div id="text" style="text-align:center">
   <h1>Welcome to Mancala</h1>
-  <p>Please re-size your screen to capture the entire board (outlined in black)</p>
-  <p>The board/marbles move counter clockwise. The player with the most marbles in their goal at the end wins</p>
+  <p>Please re-size your screen to capture the entire board (outlined in black). The board/marbles move counter clockwise. The player with the most marbles in their goal at the end wins</p>
+  <p id="ranking">Current ranking (A:B) =  0 to 0</p>
 </div>
 <canvas id="canvas" width="1330" height="500" style="border:1px solid #000000;"> </canvas>
-<script src="game.js"></script>
 
 <h1 id="turn">Currently Player A's turn</h1>
 <p>Click the button for the container you want to empty</p>
 </body>
+<script src="game.js"></script>
 </html> 
